@@ -1,14 +1,11 @@
-use strict;
-use warnings;
-use Test::Most;
-
-use_ok('English::Script');
+use Test2::V0;
+use English::Script;
 
 my $es;
-lives_ok( sub { $es = English::Script->new }, 'new' );
-lives_ok( sub { $es->parse('Set answer to 42.') }, 'set object to value' );
+ok( lives { $es = English::Script->new }, 'new' ) or note $@;
+ok( lives { $es->parse('Set answer to 42.') }, 'set object to value' ) or note $@;
 
-is_deeply(
+is(
     $es->data,
     {
         content => [ {
