@@ -1,6 +1,7 @@
 Revision history for English::Script
 
 {{$NEXT}}
+        - Migrate to Test2::V0 and add exact
         - Improve .gitignore file
 
 1.03      2020-12-10 09:32:56-08:00 America/Los_Angeles
